# InferenceHackathon

./: .gitignore  BOOTSTRAP_PLAN.md  CLAUDE.md  QWEN30INSTRUCTIONS.md  README.md  SCHEDULE.md  danielAgentScheduling.md  pyproject.toml  report.html
.remember/: remember-eagle3.md
bench/: README.md  compile3.sh  compile_kernels.sh  measure.py  measure_collective.sh  roofline.py  run_bench.sh  run_bench2.sh  run_bench3.sh  run_bench4.sh  run_bench5.sh  run_bench6.sh  run_bench_best.sh  run_bench_fp8.sh  run_decode_step.sh  run_e2e_bench.sh  run_eagle3.sh  run_kernel_bench.sh  run_overlap_prefetch.sh  run_weight_prefetch_ab.sh  sweep.py  vllm_bench.py
docs/: 1000-experiments.md  DESIGN.md  absolute-ceiling.md  alyssa-sync-findings.md  b1-engine-push.md  b1-fast-path-design.md  b1-latency-architecture 2.md  b1-optimization-atlas.md  b1-optimization-loop-roadmap.md  b1-tp8-moe-rearchitecture-h200.md  batch1-blueprint-reconciled.md  benching-findings.md  charles-work.md  comms-breakthrough-nvls.md  config-sweep.md  console-telemetry-spec.md  djamoils-findings.md  eagle3-draft-tp.md  eagle3-results-playbook.md  ep-balance-spec-verify.md  ep-placement-for-b1.md  gap-to-500.md  (+44 more)
engine/: Cargo.toml
engine/docs/: eagle3-engine-integration.md  native-spec-loop-wiring.md  spec-accept-correctness-notes.md
engine/native/: draft_vocab.h  draft_vocab_test.c  mk_tree_attn.cu  mk_tree_attn_bench.cu  mk_tree_attn_fp8.cu  mk_tree_attn_fp8_bench.cu  mk_tree_attn_fused.cu  mk_tree_attn_fused_bench.cu  sdpa_tree_ref.h  sdpa_tree_ref_test.c  spec_accept.h  spec_accept_test.c  spec_accept_tree.h  spec_accept_tree_test.c  spec_round_ref.c  tc_verify_attn.cuh  tree_attn.h  tree_attn_test.c
engine/src/: error.rs  lib.rs
engine/src/routing/: mod.rs  optimizer.rs  pipeline.rs  predictor.rs  scheduler.rs  sim.rs  stats.rs  types.rs
engine/src/spec/: accept.rs  adaptive_verify.rs  draft_vocab.rs  eagle3_engine.rs  engine.rs  mod.rs  model.rs  projection.rs  route_aware.rs  route_aware_drafter.rs  telemetry.rs  tree.rs  tree_shape.rs  types.rs
experiments/adaptive_topk/: CONIFER_ASSESSMENT.md  CONIFER_KERNELS.md  PLAN.md  SOTA.md  custom_forward_fallback 2.py  pyproject.toml  vllm_adaptive_moe.py
(+343 files in other folders)
